blinkt-k8s-controller-ds.yaml
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: blinkt-k8s-controller
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        name: blinkt-k8s-controller
    spec:
      serviceAccountName: blinkt-k8s-controller-sa
      containers:
      - name: blinkt-k8s-controller
        image: apprenda/blinkt-k8s-controller:v1
        volumeMounts:
        - mountPath: /sys
          name: sys-tree
      volumes:
      - name: sys-tree
        hostPath:
          path: /sys
