nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: acp
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: svc-nginx-v1-nginx
          servicePort: 80
