nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: acp
spec:
  selector:
    app: nginx
  ports:
  - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: acp
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
